<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >
    
    <Button android:id="@+id/lemedia_video"
        android:layout_width="80dp" 
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
 		android:text="@string/lemedia_video"
        style="@style/blue_button" />
    
    <Button android:id="@+id/lemedia_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/lemedia_video"
        android:text="@string/lemedia_photo"
        style="@style/blue_button" />
    
    <Button android:id="@+id/lemedia_audio"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/lemedia_photo"
        android:text="@string/lemedia_audio"
        style="@style/blue_button" />

	<Button android:id="@+id/lemedia_video_local"
        android:layout_width="80dp" 
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp" 
        android:layout_below="@id/lemedia_photo"
        android:text="@string/lemedia_video_local"
        style="@style/blue_button" />
    
    <Button android:id="@+id/lemedia_photo_local"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/lemedia_photo"
        android:layout_toRightOf="@id/lemedia_video_local"
        android:text="@string/lemedia_photo_local"
        style="@style/blue_button" />
    
    <Button android:id="@+id/lemedia_audio_local"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/lemedia_photo"
        android:layout_toRightOf="@id/lemedia_photo_local"
        android:text="@string/lemedia_audio_local"
        style="@style/blue_button" />
    
</RelativeLayout>