<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!--  
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/app_desp"
	    android:textSize="20dip" />
	-->
	
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true">
	    <!-- 用户名 text -->
	    <TextView
	    android:id="@+id/login_user_input"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="5dp"
	    android:text="用户名"
	    />
	    <!--  TODO: disable auto correct. -->    
	    <!-- 用户名 input -->
	    <EditText
	    android:id="@+id/username_edit"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/login_user_input"
	    android:singleLine="true"
	    android:inputType="text"
	    />
	    <!-- 密码 text -->
	    <TextView
	    android:id="@+id/login_password_input"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/username_edit"
	    android:layout_marginTop="3dp"            
	    android:text="密码"
	    />
	    <!-- 密码 input -->
	    <EditText
	    android:id="@+id/password_edit"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/login_password_input"
	    android:password="true"
	    android:singleLine="true"
	    android:inputType="textPassword"    
	    />	    	    
	</LinearLayout>
	
	<EditText android:id="@+id/subject_edit" android:layout_width="fill_parent"
	    android:hint="有什么话要说?"
		android:layout_height="fill_parent" android:layout_weight="1"
		android:textSize="15dp" android:imeOptions="actionSend|flagNoEnterAction"
		android:gravity="top" />
    	
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true" >
    	
    	<Button
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:id="@+id/take_video"
    		android:text="@string/take_video"
    		android:layout_weight="1.0"/>
    		
		<Button
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:id="@+id/take_audio"
    		android:text="@string/take_audio"
    		android:layout_weight="1.0"/>
    		
    	<Button
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:id="@+id/take_photo"
    		android:text="@string/take_photo"
    		android:layout_weight="1.0"/>
		<Button
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:id="@+id/take_share"
    		android:text="@string/take_share"
    		android:layout_weight="1.0"/>
    </LinearLayout>
    
	<ProgressBar
	    android:id="@+id/progressBar1"
	    style="?android:attr/progressBarStyleHorizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:visibility="gone"/>
</LinearLayout>